# tsctrl

./: CMakeLists.txt  README.md  main.c  tokens.conf  tsctrl.service
build-tsctrl-Desktop_Qt_6_2_3_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  check_header.conf  cmake_install.cmake  server.conf  tsctrl  tsctrl.analyze.user.props  turnstiles.conf  use_header.conf
build-tsctrl-Desktop_Qt_6_2_3_GCC_64bit-Debug/PVS-Studio/: main.c.plog  main.c.plog.d
build-tsctrl-Desktop_Qt_6_2_3_GCC_64bit-Debug/PVS-Studio/libs/: gardenapi.c.plog.d  list.c.plog.d  network.c.plog.d  ticketapi.c.plog  ticketapi.c.plog.d  zkt-c3.c.plog  zkt-c3.c.plog.d
libs/: list.c  list.h  network.c  network.h  ticketapi.c  ticketapi.h  zkt-c3.c  zkt-c3.h
